--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -1,19 +1,55 @@
-{% if user.is_authenticated %}
-Logged in as {{ user.username }}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Todo App</title>
+    <!-- Add Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css">
+    <!-- Add your custom CSS -->
+    <link rel="stylesheet" type="text/css" href="todo/static/todo/styles.css">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="/">Todo App</a>
+            {% if user.is_authenticated %}
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'createtodo' %}">Create</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'currenttodos' %}">Current</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'completedtodos' %}">Completed</a>
+                        </li>
+                    </ul>
+                </div>
+                <form action="{% url 'logoutuser' %}" method="POST" class="ml-auto">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-danger">Logout</button>
+                </form>
+            {% else %}
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'signupuser' %}">Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'loginuser' %}">Login</a>
+                    </li>
+                </ul>
+            {% endif %}
+        </div>
+    </nav>
+    <div class="container mt-4">
+        {% block content %}{% endblock %}
+    </div>
 
-<a href="{% url 'createtodo' %}">Create</a>
-<a href="{% url 'currenttodos' %}">Current</a>
-<a href="{% url 'completedtodos' %}">Completed</a>
-
-<form action="{%url 'logoutuser' %}" method="POST">
-    {% csrf_token %}
-    <button type="submit">Logout</button>
-</form>
-
-{% else %}
-<a href="{%url 'signupuser' %}">Sign Up</a>
-<a href="{%url 'loginuser' %}">Login</a>
-{% endif %}
-<br>
-<br>
-{%block content%}{%endblock%}
+    <!-- Add Bootstrap JS and jQuery (optional) for Bootstrap features -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
+</body>
+</html>
