--- a/todo/templates/todo/currenttodos.html
+++ b/todo/templates/todo/currenttodos.html
@@ -1,14 +1,18 @@
-{%extends 'todo/base.html' %}
+{% extends 'todo/base.html' %}
 {% block content %}
-Current
-<ul>
-    {% for todo in todos %}
-    <li>
-        <a href="{% url 'viewtodo' todo.id %}">
-            {%if todo.important%}<b>{%endif%}{{ todo.title }}{%if todo.important%}</b>{%endif%}
-            {%if todo.memo%} - {{todo.memo}}{%endif%}
-        </a>
-    </li>
-    {% endfor %}
-</ul>
+<div class="row justify-content-center mt-5">
+    <div class="col-md-6">
+        <h1 class="text-center">Current Todos</h1>
+        <ul class="list-group mt-3">
+            {% for todo in todos %}
+            <li class="list-group-item">
+                <a href="{% url 'viewtodo' todo.id %}" class="text-decoration-none">
+                    {% if todo.important %}<b>{% endif %}{{ todo.title }}{% if todo.important %}</b>{% endif %}
+                    {% if todo.memo %} - {{ todo.memo }}{% endif %}
+                </a>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
 {% endblock %}
