--- a/todo/templates/todo/home.html
+++ b/todo/templates/todo/home.html
@@ -1,5 +1,17 @@
-{%extends 'todo/base.html' %}
+{% extends 'todo/base.html' %}
 {% block content %}
-Home
-
+<div class="jumbotron text-center mt-5">
+    <h1>Welcome to Your Todo App</h1>
+    <p class="lead">Manage your tasks efficiently!</p>
+    <hr class="my-4">
+    <p>If you are logged in, you can start creating and managing your todos.</p>
+    <p>
+        {% if user.is_authenticated %}
+            <a class="btn btn-primary btn-lg" href="{% url 'createtodo' %}" role="button">Create Todo</a>
+        {% else %}
+            <a class="btn btn-success btn-lg" href="{% url 'signupuser' %}" role="button">Sign Up</a>
+            <a class="btn btn-info btn-lg" href="{% url 'loginuser' %}" role="button">Login</a>
+        {% endif %}
+    </p>
+</div>
 {% endblock %}
