--- a/todo/templates/todo/signupuser.html
+++ b/todo/templates/todo/signupuser.html
@@ -1,14 +1,16 @@
-{%extends 'todo/base.html' %}
+{% extends 'todo/base.html' %}
 {% block content %}
-
-<h1>Sign Up</h1>
-
-<h2>{{ error }}</h2>
-
-<form method="POST">
-    {% csrf_token %}
-{{ form.as_p }}
-    <button type="submit">Sign Up</button>
-</form>
-
-{%endblock%}
+<div class="row justify-content-center mt-5">
+    <div class="col-md-6">
+        <h1 class="text-center">Sign Up</h1>
+        <h2 class="text-center text-danger">{{ error }}</h2>
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <div class="text-center mt-3">
+                <button type="submit" class="btn btn-primary">Sign Up</button>
+            </div>
+        </form>
+    </div>
+</div>
+{% endblock %}
