--- a/todo/templates/todo/signupuser.html
+++ b/todo/templates/todo/signupuser.html
@@ -6,6 +6,7 @@
         <h2 class="text-center text-danger">{{ error }}</h2>
         <form method="POST">
             {% csrf_token %}
+            {{ form.email.label_tag }} {{ form.email }}
             {{ form.as_p }}
             <div class="text-center mt-3">
                 <button type="submit" class="btn btn-primary">Sign Up</button>
